recursion.cons.concat.Concat.scala.error
Erreur de compilation :
Concat:9: error: not found: value reverse
  aux(reverse(l1),l2,Nil)
      ^